--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -7,12 +7,11 @@ services:
       context: ./services/users
       dockerfile: Dockerfile
     volumes:
-      - './services/users:/d/docker-images'
+      - './services/users:/c/docker-images'
     ports:
       - 5001:5000
     environment:
       - COMPOSE_CONVERT_WINDOWS_PATHS=1
-      - FLASK_APP=project/__init__.py
       - FLASK_ENV=development
       - APP_SETTINGS=project.config.DevelopmentConfig 
       - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_dev 
