--- a/app/services/users/Dockerfile-prod
+++ b/app/services/users/Dockerfile-prod
@@ -24,4 +24,5 @@ COPY . /usr/src/app
 # run server
 # RUN chmod 644 manage.py
 # CMD python manage.py run -h 0.0.0.0
-CMD ["/usr/src/app/entrypoint-prod.sh"]
+# CMD ["/usr/src/app/entrypoint-prod.sh"]
+CMD gunicorn -b 0.0.0.0:5000 manage:app
