--- a/app/docker-compose-prod.yml
+++ b/app/docker-compose-prod.yml
@@ -5,7 +5,7 @@ services:
   nginx:
     build:
       context: ./services/nginx
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile-prod
     restart: always
     ports:
       - 80:80
@@ -15,16 +15,15 @@ services:
   users:
     build:
       context: ./services/users
-      dockerfile: Dockerfile
-    volumes:
-      - './services/users:/c/docker-images'
-    ports:
-      - 5001:5000
+      dockerfile: Dockerfile-prod
+    # ports are exposed by default if there is a shared network
+    # using expose to make a port available to other containers is unnecessary
+    expose:
+      - 5000  
     environment:
-      - COMPOSE_CONVERT_WINDOWS_PATHS=1
-      - FLASK_ENV=development
-      - APP_SETTINGS=project.config.DevelopmentConfig 
-      - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_dev 
+      - FLASK_ENV=production
+      - APP_SETTINGS=project.config.ProductionConfig
+      - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_prod 
       - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
     depends_on: 
       - users-db
@@ -33,8 +32,8 @@ services:
     build:
       context: ./services/users/project/db
       dockerfile: Dockerfile
-    ports:
-      - 5435:5432
+    expose:
+      - 5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
