--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,12 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.7.2
+    environment:
+      DOCKER_TLS_VERIFY: "1"
+      DOCKER_HOST: tcp://40.78.68.74:2376
+      DOCKER_CERT_PATH: C:\Users\Terence Machine\.docker\machine\machines\tc-docker
+      DOCKER_MACHINE_NAME: tc-docker
+      COMPOSE_CONVERT_WINDOWS_PATHS: "true"
     steps:
       - checkout
       - run:
