--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -2,6 +2,7 @@ Flask==1.0.3
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
 Flask-Testing==0.7.1
+flask-debugtoolbar==0.10.1
 psycopg2-binary==2.8.3
 gunicorn==19.9.0
 coverage==4.5.3
