--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,6 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.7.2
-    environment:
-      DOCKER_HOST: 127.0.0.1:5000
     steps:
       - checkout
       - run:
@@ -16,7 +14,7 @@ jobs:
 
       - run:
           name: run service
-          command: docker-compose up -d --build
+          command: sudo service docker start && docker-compose up -d
 
       - run:
           name: unit tests & coding standard check
