--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,17 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.7.2
-    environment:
-      DOCKER_HOST: 127.0.0.1:2375
     steps:
       - checkout
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="23.02.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+            
       - run:
           name: Install Docker Compose
           command: |
